test/implicitDup7_3.slq
// args: --run

def foo(){
	x:=H(0);
	def f()⇒x;
	f():=f(); /// error
}
def main()⇒foo;
